inputframework/backup/helm-charts/27.07.2022 CT sanity check/mobius-ct/ingress-mobiusrest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobiusrest
  annotations:
    kubernetes.io/ingress.class: "nginx-mobius-ct"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
  - host: dm-mobius-ct.high.raitcs01-test.aws.de.pri.o2.com
    http:
      paths:
      - path: /mobiusapi(.*)
        pathType: Prefix
        backend:
          service:
            name: mobiusview
            port:
              number: 80
  tls:
  - hosts:
    - dm-mobius-ct.high.raitcs01-test.aws.de.pri.o2.com
    secretName: mobius-ct-tls-secret
