inputframework/backup/helm-charts/27.07.2022 CT sanity check/mobius-ct/oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: mobius-ct
  annotations:
    kubernetes.io/ingress.class: "nginx-mobius-ct"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"

spec:
  rules:
  - host: dm-mobius-ct.high.raitcs01-test.aws.de.pri.o2.com
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
  tls:
  - hosts:
    - dm-mobius-ct.high.raitcs01-test.aws.de.pri.o2.com
    secretName: mobius-ct-tls-secret
